implement roles middleware in routes

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # Mysql
 DB_HOST = 127.0.0.1   
 DB_USERNAME = root
-DB_PASSWORD = password
+DB_PASSWORD = 
 DB_NAME = alta_agregasi
 DB_PORT = 3306
 
