--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,28 +1,24 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
-name: Go
-
+name: Deploy
 on:
   push:
     branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
-
 jobs:
-
-  build:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-
-    - name: Set up Go
-      uses: actions/setup-go@v3
+    - name: Deploy
+      uses: appleboy/ssh-action@master
       with:
-        go-version: 1.19
-
-    - name: Build
-      run: go build -v ./...
-
-    - name: Test
-      run: go test -v ./...
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        key: ${{ secrets.PRIVATE_KEY }}
+        port: 22
+        script: |
+          export PATH=$PATH:/usr/local/go/bin
+          cd app/go-gorm/
+          git pull
+          sudo docker build -t go-application .
+          sudo docker stop go-application
+          sudo docker rm go-application
+          sudo docker run --name go-application -dp 8081:8080 go-application
+          sudo docker compose -f docker-compose.production.yml up -d --build
