--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,10 +15,10 @@ jobs:
         port: 22
         script: |
           export PATH=$PATH:/usr/local/go/bin
-          cd app/go-gorm/
+          cd ecommerce-book
           git pull
           sudo docker build -t go-application .
           sudo docker stop go-application
           sudo docker rm go-application
           sudo docker run --name go-application -dp 8081:8080 go-application
-          sudo docker compose -f docker-compose.production.yml up -d --build
+          sudo docker compose -f docker-compose.development.yml up -d --build
