--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -8,7 +8,7 @@ services:
       - 8081:8080
     environment:
       - DB_USERNAME=rood
-      - DB_PASSWORD=
+      - DB_PASSWORD=password
       - DB_DB=alta_agregasi
       - DB_HOST=127.0.0.1
       - DB_PORT=3306
