--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,4 +17,4 @@ jobs:
           export PATH=$PATH:/usr/local/go/bin
           cd ecommerce-book
           git pull
-          sudo docker-compose.development.yml
+          sudo docker compose -f docker-compose.production.yml up -d --build
