--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -6,4 +6,10 @@ services:
     build: .
     ports: 
       - 8081:8080
+    environment:
+      - DB_USERNAME=admin
+      - DB_PASSWORD=adminadmin
+      - DB_DB=alta_agregasi
+      - DB_HOST=godb.cvkjph0grufv.us-east-1.rds.amazonaws.com
+      - DB_PORT=3306
     restart: on-failure
